# winreg-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: basic_usage.rs  enum.rs  installed_apps.rs  load_app_key.rs  map_key_serialization.rs  reg2json.rs  serialization.rs  transacted_serialization.rs  transactions.rs
src/: enums.rs  lib.rs  reg_key.rs  transaction.rs
src/decoder/: serialization_serde.rs
src/encoder/: serialization_serde.rs
tests/: reg_key.rs  reg_value.rs  serialization.rs
tests/common/: mod.rs
