[package]
name = "winreg2"
edition = "2021"
version = "0.53.1"
authors = ["ssrlive", "Igor Shaula <gentoo90@gmail.com>"]
license = "MIT"
description = "Rust bindings to MS Windows Registry API"
repository = "https://github.com/ssrlive/winreg-rs"
documentation = "https://docs.rs/winreg2"
readme = "README.md"
keywords = ["Windows", "WinSDK", "Registry"]
categories = ["api-bindings", "os::windows-apis"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]

[features]
# default = ["serialization-serde"]
transactions = []
serialization-serde = ["transactions", "serde"]

[dependencies]
cfg-if = "1.0"
chrono = { version = "0.4.6", optional = true }
serde = { version = "1", optional = true }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Time",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
] }

[dev-dependencies]
rand = "0.8"
serde-transcode = "1"
serde_bytes = "0.11"
serde_derive = "1"
serde_json = "1"
tempfile = "3"

[[example]]
name = "basic_usage"
required-features = ["chrono"]

[[example]]
name = "enum"

[[example]]
name = "load_app_key"

[[example]]
name = "transactions"
required-features = ["transactions"]

[[example]]
name = "serialization"
required-features = ["serialization-serde"]

[[example]]
name = "transacted_serialization"
required-features = ["serialization-serde"]

[[example]]
name = "reg2json"
required-features = ["serialization-serde"]

[[example]]
name = "map_key_serialization"
required-features = ["serialization-serde"]

[[example]]
name = "installed_apps"
required-features = ["serialization-serde"]
